tests/reference/ast_f90-types_13-ddae644.stderr
syntax error: Internal Compiler Error: syntax is ambiguous in the parser
 --> tests/../integration_tests/types_13.f90:7:5
  |
7 |     character*(*) :: d
  |     ^^^^^^^^^^^^^ 
